--- a/examples/bonds_angles_torsions.ipynb
+++ b/examples/bonds_angles_torsions.ipynb
@@ -9,30 +9,14 @@
     "- DOI: 10.1063/1.4964627\n",
     "\n",
     "Disclaimers:\n",
-    "- This only works for mdl/sdf type files\n",
+    "- This only works for mol, sdf, and cml type files\n",
     "- This is an attempt at the recreation from literature and may not be implemented as exactly as it is in the literature source\n",
     "\n",
     "\n",
-    "The first thing you need to do to make your Bonds Angles Torsions representation using chemreps is import the BagMaker from `chemreps.bagger` and the bat representation from `chemreps.bat` as seen below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from chemreps.bagger import BagMaker\n",
-    "from chemreps.bat import bat"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first thing we need to do when using Bonds Angles Torsions is to make the bags for our dataset. The dataset that we will be using can be found in the data directory of this repository. If you cloned this repository locally you should be able to set the path as '../data/sdf/'. Once we have the path to our dataset we need to pass it to the `BagMaker` along with the type of representation we want. In this case we want to make the Bonds Angles Torsions representation so we will pass `BagMaker` the string 'BAT'. \n",
+    "To make a Bonds Angles Torsions (BAT) representation for your molecule you need to pass `chemreps.bat` the empty bags and bag sizes of your dataset. This can be done by loading premade bags using `LoadBags` from `chemreps.dataset` or by creating your own bags using `BagMaker` from `chemreps.bagger`.\n",
     "\n",
-    "Note: For larger datasets this may take a little time to run as it needs to iterate through the entire dataset and find the proper bag sizes for the entirety of the dataset."
+    "## Load dataset bags\n",
+    "To load the bags for a dataset you need to pass `LoadBags` the appropriate representation and dataset."
    ]
   },
   {
@@ -41,15 +25,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = '../data/sdf/'\n",
-    "bagger = BagMaker('BAT', dataset)"
+    "from chemreps.dataset import LoadBags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger = LoadBags('BAT', 'QM9')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have made our bags and stored them in the object called `bagger`, we can get our empty bags by calling `bagger.bags` as well as the size of our bags with `bagger.bag_sizes`."
+    "Now that we have loaded our bags and stored them in the object called `bagger`, we can get our empty bags by calling `bagger.bags` as well as the size of our bags with `bagger.bag_sizes`."
    ]
   },
   {
@@ -74,7 +66,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the bags and bag sizes for the dataset, we can start making our representations. To make a Bonds Angles Torsions representation using `chemreps` all we need to do is pass `bat` the molecule file, the `bagger.bags`, and the `bagger.bag_sizes`. "
+    "## Create your own bags\n",
+    "The dataset that we will be using can be found in the data directory of this repository. If you cloned this repository locally you should be able to set the path as '../data/sdf/'. Once we have the path to our dataset we need to pass it to the `BagMaker` along with the type of representation we want. In this case we want to make the BAT representation so we will pass `BagMaker` the string 'BAT'. \n",
+    "\n",
+    "Note: For larger datasets this may take a little time to run as it needs to iterate through the entire dataset and find the proper bag sizes for the entirety of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chemreps.bagger import BagMaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = '../data/sdf/'\n",
+    "bagger = BagMaker('BAT', dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger.bags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger.bag_sizes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a representation\n",
+    "Once we have the bags and bag sizes for the dataset, we can start making our representations. To make a BAT representation using `chemreps` all we need to do is pass `bat` the molecule file, the `bagger.bags`, and the `bagger.bag_sizes`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chemreps.bat import bat"
    ]
   },
   {
@@ -159,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
