--- a/examples/just_bonds.ipynb
+++ b/examples/just_bonds.ipynb
@@ -11,11 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Just Bonds representation differs from the Bag of Bonds representation in that bonds are considered only for atoms that are \"actually\" connected. (Remember the Bag of Bonds representation considers all interatomic distances). Connectivity is defined by the attachment in the input geometry files (MDL/SDF files), and there is currently no support for file formats that don't provide this information. The representation is adapted from the literature reference below:\n",
+    "The Just Bonds representation differs from the Bag of Bonds representation in that bonds are considered only for atoms that are \"actually\" connected. (Remember the Bag of Bonds representation considers all interatomic distances). Connectivity is defined by the attachment in the input geometry files (MDL, SDF, and CML files), and there is currently no support for file formats that don't provide this information. The representation is adapted from the literature reference below:\n",
     "\n",
     "    - DOI: 10.1021/acs.jpclett.5b00831\n",
     "    \n",
-    "The first thing you need to do to make your bonds only representation using chemreps. You import the BagMaker from chemreps.bagger as well as the just_bonds representation from chemreps.just_bonds as seen below."
+    "To make a Just Bonds representation for your molecule you need to pass `chemreps.just_bonds` the empty bags and bag sizes of your dataset. This can be done by loading premade bags using `LoadBags` from `chemreps.dataset` or by creating your own bags using `BagMaker` from `chemreps.bagger`.\n",
+    "\n",
+    "## Load dataset bags\n",
+    "To load the bags for a dataset you need to pass `LoadBags` the appropriate representation and dataset."
    ]
   },
   {
@@ -24,17 +27,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chemreps.bagger import BagMaker\n",
-    "from chemreps.just_bonds import bonds\n",
-    "import glob\n",
-    "import pandas as pd"
+    "from chemreps.dataset import LoadBags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger = LoadBags('JustBonds', 'QM9')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first thing we need to do when using Bonds is to make the bags for our dataset. The dataset that we will be using can be found in the data directory of this repository. If you cloned this repository locally, then you should be able to set the path as '../data/sdf/'. Once we have the path to our dataset, we need to pass it to the BagMaker along with the type of representation we want. In this case we want to make Bonds representation, so we will pass BagMaker the string 'JustBonds'.\n",
+    "Now that we have loaded our bags and stored them in the object called `bagger`, we can get our empty bags by calling `bagger.bags` as well as the size of our bags with `bagger.bag_sizes`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger.bags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bagger.bag_sizes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create your own bags\n",
+    "The dataset that we will be using can be found in the data directory of this repository. If you cloned this repository locally you should be able to set the path as '../data/sdf/'. Once we have the path to our dataset we need to pass it to the `BagMaker` along with the type of representation we want. In this case we want to make the Just Bonds representation so we will pass `BagMaker` the string 'JustBonds'. \n",
     "\n",
     "Note: For larger datasets this may take a little time to run as it needs to iterate through the entire dataset and find the proper bag sizes for the entirety of the dataset."
    ]
@@ -45,15 +80,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from chemreps.bagger import BagMaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = '../data/sdf/'\n",
-    "bags = BagMaker('JustBonds', dataset)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have made our bags and stored them in the object called bags, we can get our empty bags by calling bagger.bags as well as the size of our bags with bagger.bag_sizes."
+    "bagger = BagMaker('JustBonds', dataset)"
    ]
   },
   {
@@ -62,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bags.bags"
+    "bagger.bags"
    ]
   },
   {
@@ -71,14 +108,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bags.bag_sizes"
+    "bagger.bag_sizes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the bags and bag sizes for the dataset, we can start making our representations. To make a Bonds representation using chemreps all we need to do is pass bonds the molecule file, the bagger.bags, and the bagger.bag_sizes. "
+    "## Make a representation\n",
+    "Once we have the bags and bag sizes for the dataset, we can start making our representations. To make a Just Bonds representation using `chemreps` all we need to do is pass `bonds` the molecule file, the `bagger.bags`, and the `bagger.bag_sizes`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chemreps.just_bonds import bonds"
    ]
   },
   {
@@ -89,7 +136,7 @@
    "source": [
     "mfiles = dataset + 'butane.sdf'\n",
     "print(mfiles)\n",
-    "rep = bonds(mfiles, bags.bags, bags.bag_sizes)\n",
+    "rep = bonds(mfiles, bagger.bags, bagger.bag_sizes)\n",
     "rep"
    ]
   },
@@ -115,11 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "import pandas as pd\n",
+    "\n",
     "row_list = []\n",
     "for i in sorted(glob.iglob(dataset + '/*')):\n",
     "    fname = i\n",
     "    print(fname)\n",
-    "    rep = bonds(fname, bags.bags, bags.bag_sizes)\n",
+    "    rep = bonds(fname, bagger.bags, bagger.bag_sizes)\n",
     "    dict1 = {}\n",
     "    dict1.update({'Name': fname})\n",
     "    dict1.update({'Rep': rep})\n",
@@ -164,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
